--- a/assets/styles.css
+++ b/assets/styles.css
@@ -103,12 +103,42 @@ nav a{
 footer{
     background-color: black;
     text-align: center;
-    height: 5vh;
+    padding-top: 1.5rem;
+    height: 25vh;
     position: center;
 }
-footer p{
+.footer h3{
+    font-size: 1.3rem;
     color: #fff;
+    margin-bottom: 1rem;
 }
+.footer p{
+    font-size: 1.3rem;
+    color: #fff;
+    margin-bottom: 1rem;
+}
+.social-links{
+    display: flex;
+    justify-content: center;
+}
+.social-links a{
+    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0.4rem;
+    transition: all 0.4s ease;
+}
+.social-links a:hover{
+    color: #f7327a;
+    border-color: #f7327a;
+}
+
 
 nav .fa{
     display: none;
