--- a/fhbCSS/register.css
+++ b/fhbCSS/register.css
@@ -1,7 +1,7 @@
-body {
+/* body {
 	font-family: Arial, sans-serif;
 	background-color: #f0f0f0;
-}
+} */
 
 .container {
 	width: 50%;
@@ -12,7 +12,7 @@ body {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.top {
 	text-align: center;
 }
 
