--- a/assets/styles.css
+++ b/assets/styles.css
@@ -200,6 +200,12 @@ nav .fa{
 }
 
 @media(max-width:700px){
+    .navbar-brand img{
+        height: 6vh;
+    }
+    .navbar-brand p{
+       font-size: 12px;
+    }
     .banner h1{
         font-size: 40px;
     }
