--- a/fhbCSS/contact.css
+++ b/fhbCSS/contact.css
@@ -4,7 +4,10 @@
     padding: 0;
     margin: 0;
 }
-
+body{
+    /* font-family: 'Open Sans', sans-serif; */
+    /* line-height: 1.5; */
+}
 .contact-bg{
     height: 40vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(image/contact-bg.jpg);
