making changes to the login page

--- a/fhbCSS/login.css
+++ b/fhbCSS/login.css
@@ -3,10 +3,10 @@ body{
     padding: 0px;
 
 
-    background-image: url(/assets/images/skyscraper4.jpg);
-    background-image: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image:url(/assets/images/skyscrp3.png);
+    background-image:center;
+    background-repeat:no-repeat;
+    background-size:cover;
     height: 100%;
     overflow: hidden;
 }
